Revert "Update hedera-node project formatting"
This reverts commit 2a6cee7cf473dcd23c2cd4eb4876d67e1a1c1d58.