@@ -1,6 +1,11 @@
-/*
- * Copyright (C) 2021-2022 Hedera Hashgraph, LLC
- *
+package com.hedera.services.store.contracts.precompile;
+
+/*-
+ * ‌
+ * Hedera Services Node
+ * ​
+ * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
+ * ​
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -12,45 +17,8 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ * ‍
  */
-package com.hedera.services.store.contracts.precompile;
-
-import static com.hedera.services.state.EntityCreator.EMPTY_MEMO;
-import static com.hedera.services.store.contracts.precompile.AbiConstants.ABI_ID_BURN_TOKEN;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.AMOUNT;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.DEFAULT_GAS_PRICE;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.TEST_CONSENSUS_TIME;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.burnSuccessResultWith49Supply;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.burnSuccessResultWithLongMaxValueSupply;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.contractAddr;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.contractAddress;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.expirableTxnRecordBuilder;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.failInvalidResult;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurn;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurnAmountOversize;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurnMaxAmount;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleId;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleTokenAddr;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.invalidSigResult;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleBurn;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleId;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleTokenAddr;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.recipientAddr;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.successResult;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.targetSerialNos;
-import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.timestamp;
-import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.FAIL_INVALID;
-import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SIGNATURE;
-import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_TOKEN_ID;
-import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.OK;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doCallRealMethod;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
 
 import com.esaulpaugh.headlong.util.Integers;
 import com.hedera.services.context.SideEffectsTracker;
@@ -95,13 +63,6 @@ import com.hederahashgraph.api.proto.java.TokenID;
 import com.hederahashgraph.api.proto.java.TransactionBody;
 import com.hederahashgraph.api.proto.java.TransactionID;
 import com.hederahashgraph.fee.FeeObject;
-import java.io.IOException;
-import java.math.BigDecimal;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.tuweni.bytes.Bytes;
 import org.hyperledger.besu.datatypes.Wei;
@@ -114,418 +75,422 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+import static com.hedera.services.state.EntityCreator.EMPTY_MEMO;
+import static com.hedera.services.store.contracts.precompile.AbiConstants.ABI_ID_BURN_TOKEN;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.AMOUNT;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.DEFAULT_GAS_PRICE;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.TEST_CONSENSUS_TIME;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.burnSuccessResultWith49Supply;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.burnSuccessResultWithLongMaxValueSupply;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.contractAddr;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.contractAddress;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.expirableTxnRecordBuilder;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.failInvalidResult;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurn;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurnAmountOversize;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleBurnMaxAmount;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleId;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.fungibleTokenAddr;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.invalidSigResult;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleBurn;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleId;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.nonFungibleTokenAddr;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.recipientAddr;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.successResult;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.targetSerialNos;
+import static com.hedera.services.store.contracts.precompile.HTSTestsUtil.timestamp;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.FAIL_INVALID;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SIGNATURE;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_TOKEN_ID;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.OK;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doCallRealMethod;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+
 @ExtendWith(MockitoExtension.class)
 class BurnPrecompilesTest {
 
-    private final Bytes pretendArguments = Bytes.of(Integers.toBytes(ABI_ID_BURN_TOKEN));
+	private final Bytes pretendArguments = Bytes.of(Integers.toBytes(ABI_ID_BURN_TOKEN));
 
-    @Mock private AccountStore accountStore;
-    @Mock private TypedTokenStore tokenStore;
-    @Mock private GlobalDynamicProperties dynamicProperties;
-    @Mock private GasCalculator gasCalculator;
-    @Mock private MessageFrame frame;
-    @Mock private TxnAwareEvmSigsVerifier sigsVerifier;
-    @Mock private RecordsHistorian recordsHistorian;
-    @Mock private DecodingFacade decoder;
-    @Mock private EncodingFacade encoder;
-    @Mock private BurnLogic burnLogic;
-    @Mock private SideEffectsTracker sideEffects;
-    @Mock private TransactionBody.Builder mockSynthBodyBuilder;
-    @Mock private ExpirableTxnRecord.Builder mockRecordBuilder;
-    @Mock private SyntheticTxnFactory syntheticTxnFactory;
-    @Mock private HederaStackedWorldStateUpdater worldUpdater;
-    @Mock private WorldLedgers wrappedLedgers;
-    @Mock private TransactionalLedger<NftId, NftProperty, MerkleUniqueToken> nfts;
+	@Mock
+	private AccountStore accountStore;
+	@Mock
+	private TypedTokenStore tokenStore;
+	@Mock
+	private GlobalDynamicProperties dynamicProperties;
+	@Mock
+	private GasCalculator gasCalculator;
+	@Mock
+	private MessageFrame frame;
+	@Mock
+	private TxnAwareEvmSigsVerifier sigsVerifier;
+	@Mock
+	private RecordsHistorian recordsHistorian;
+	@Mock
+	private DecodingFacade decoder;
+	@Mock
+	private EncodingFacade encoder;
+	@Mock
+	private BurnLogic burnLogic;
+	@Mock
+	private SideEffectsTracker sideEffects;
+	@Mock
+	private TransactionBody.Builder mockSynthBodyBuilder;
+	@Mock
+	private ExpirableTxnRecord.Builder mockRecordBuilder;
+	@Mock
+	private SyntheticTxnFactory syntheticTxnFactory;
+	@Mock
+	private HederaStackedWorldStateUpdater worldUpdater;
+	@Mock
+	private WorldLedgers wrappedLedgers;
+	@Mock
+	private TransactionalLedger<NftId, NftProperty, MerkleUniqueToken> nfts;
+	@Mock
+	private TransactionalLedger<Pair<AccountID, TokenID>, TokenRelProperty, MerkleTokenRelStatus> tokenRels;
+	@Mock
+	private TransactionalLedger<AccountID, AccountProperty, MerkleAccount> accounts;
+	@Mock
+	private TransactionalLedger<TokenID, TokenProperty, MerkleToken> tokens;
+	@Mock
+	private ExpiringCreations creator;
+	@Mock
+	private ImpliedTransfersMarshal impliedTransfersMarshal;
+	@Mock
+	private FeeCalculator feeCalculator;
+	@Mock
+	private FeeObject mockFeeObject;
+	@Mock
+	private StateView stateView;
+	@Mock
+	private ContractAliases aliases;
+	@Mock
+	private UsagePricesProvider resourceCosts;
+	@Mock
+	private InfrastructureFactory infrastructureFactory;
+	@Mock
+	private AssetsLoader assetLoader;
+	@Mock
+	private HbarCentExchange exchange;
+	@Mock
+	private ExchangeRate exchangeRate;
 
-    @Mock
-    private TransactionalLedger<Pair<AccountID, TokenID>, TokenRelProperty, MerkleTokenRelStatus>
-            tokenRels;
+	private static final long TEST_SERVICE_FEE = 5_000_000;
+	private static final long TEST_NETWORK_FEE = 400_000;
+	private static final long TEST_NODE_FEE = 300_000;
+	private static final int CENTS_RATE = 12;
+	private static final int HBAR_RATE = 1;
+	private static final long EXPECTED_GAS_PRICE =
+			(TEST_SERVICE_FEE + TEST_NETWORK_FEE + TEST_NODE_FEE) / DEFAULT_GAS_PRICE * 6 / 5;
 
-    @Mock private TransactionalLedger<AccountID, AccountProperty, MerkleAccount> accounts;
-    @Mock private TransactionalLedger<TokenID, TokenProperty, MerkleToken> tokens;
-    @Mock private ExpiringCreations creator;
-    @Mock private ImpliedTransfersMarshal impliedTransfersMarshal;
-    @Mock private FeeCalculator feeCalculator;
-    @Mock private FeeObject mockFeeObject;
-    @Mock private StateView stateView;
-    @Mock private ContractAliases aliases;
-    @Mock private UsagePricesProvider resourceCosts;
-    @Mock private InfrastructureFactory infrastructureFactory;
-    @Mock private AssetsLoader assetLoader;
-    @Mock private HbarCentExchange exchange;
-    @Mock private ExchangeRate exchangeRate;
+	private HTSPrecompiledContract subject;
 
-    private static final long TEST_SERVICE_FEE = 5_000_000;
-    private static final long TEST_NETWORK_FEE = 400_000;
-    private static final long TEST_NODE_FEE = 300_000;
-    private static final int CENTS_RATE = 12;
-    private static final int HBAR_RATE = 1;
-    private static final long EXPECTED_GAS_PRICE =
-            (TEST_SERVICE_FEE + TEST_NETWORK_FEE + TEST_NODE_FEE) / DEFAULT_GAS_PRICE * 6 / 5;
+	@BeforeEach
+	void setUp() throws IOException {
+		Map<HederaFunctionality, Map<SubType, BigDecimal>> canonicalPrices = new HashMap<>();
+		canonicalPrices.put(HederaFunctionality.TokenBurn, Map.of(SubType.TOKEN_FUNGIBLE_COMMON, BigDecimal.valueOf(0)));
+		given(assetLoader.loadCanonicalPrices()).willReturn(canonicalPrices);
+		PrecompilePricingUtils precompilePricingUtils = new PrecompilePricingUtils(assetLoader, exchange, () -> feeCalculator, resourceCosts, stateView);
+		subject = new HTSPrecompiledContract(
+				dynamicProperties, gasCalculator, recordsHistorian, sigsVerifier, decoder, encoder, syntheticTxnFactory,
+				creator, impliedTransfersMarshal, () -> feeCalculator, stateView, precompilePricingUtils,
+				infrastructureFactory);
+		given(infrastructureFactory.newSideEffects()).willReturn(sideEffects);
+		given(worldUpdater.permissivelyUnaliased(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+	}
 
-    private HTSPrecompiledContract subject;
+	@Test
+	void nftBurnFailurePathWorks() {
+		givenNonfungibleFrameContext();
+		givenPricingUtilsContext();
 
-    @BeforeEach
-    void setUp() throws IOException {
-        Map<HederaFunctionality, Map<SubType, BigDecimal>> canonicalPrices = new HashMap<>();
-        canonicalPrices.put(
-                HederaFunctionality.TokenBurn,
-                Map.of(SubType.TOKEN_FUNGIBLE_COMMON, BigDecimal.valueOf(0)));
-        given(assetLoader.loadCanonicalPrices()).willReturn(canonicalPrices);
-        PrecompilePricingUtils precompilePricingUtils =
-                new PrecompilePricingUtils(
-                        assetLoader, exchange, () -> feeCalculator, resourceCosts, stateView);
-        subject =
-                new HTSPrecompiledContract(
-                        dynamicProperties,
-                        gasCalculator,
-                        recordsHistorian,
-                        sigsVerifier,
-                        decoder,
-                        encoder,
-                        syntheticTxnFactory,
-                        creator,
-                        impliedTransfersMarshal,
-                        () -> feeCalculator,
-                        stateView,
-                        precompilePricingUtils,
-                        infrastructureFactory);
-        given(infrastructureFactory.newSideEffects()).willReturn(sideEffects);
-        given(worldUpdater.permissivelyUnaliased(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
-    }
+		given(sigsVerifier.hasActiveSupplyKey(true,
+				nonFungibleTokenAddr, recipientAddr, wrappedLedgers)
+		)
+				.willThrow(new InvalidTransactionException(INVALID_SIGNATURE));
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
+				.willReturn(1L);
+		given(mockSynthBodyBuilder.build()).
+				willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
+				.willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any()))
+				.willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee())
+				.willReturn(1L);
+		given(creator.createUnsuccessfulSyntheticRecord(INVALID_SIGNATURE)).willReturn(mockRecordBuilder);
+		given(encoder.encodeBurnFailure(INVALID_SIGNATURE)).willReturn(invalidSigResult);
+		given(worldUpdater.aliases()).willReturn(aliases);
+		given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
 
-    @Test
-    void nftBurnFailurePathWorks() {
-        givenNonfungibleFrameContext();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, a -> a);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		final var result = subject.computeInternal(frame);
 
-        given(
-                        sigsVerifier.hasActiveSupplyKey(
-                                true, nonFungibleTokenAddr, recipientAddr, wrappedLedgers))
-                .willThrow(new InvalidTransactionException(INVALID_SIGNATURE));
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(creator.createUnsuccessfulSyntheticRecord(INVALID_SIGNATURE))
-                .willReturn(mockRecordBuilder);
-        given(encoder.encodeBurnFailure(INVALID_SIGNATURE)).willReturn(invalidSigResult);
-        given(worldUpdater.aliases()).willReturn(aliases);
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+		assertEquals(invalidSigResult, result);
+		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, a -> a);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        final var result = subject.computeInternal(frame);
+	@Test
+	void nftBurnFailurePathWorksWithNullLedgers() {
+		givenNonfungibleFrameContext();
+		givenPricingUtilsContext();
 
-        assertEquals(invalidSigResult, result);
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
-    }
+		given(sigsVerifier.hasActiveSupplyKey(true,
+				nonFungibleTokenAddr, recipientAddr, null)
+		)
+				.willThrow(new NullPointerException());
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
+				.willReturn(1L);
+		given(mockSynthBodyBuilder.build()).
+				willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
+				.willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any()))
+				.willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee())
+				.willReturn(1L);
+		given(creator.createUnsuccessfulSyntheticRecord(FAIL_INVALID)).willReturn(mockRecordBuilder);
+		given(encoder.encodeBurnFailure(FAIL_INVALID)).willReturn(failInvalidResult);
+		given(worldUpdater.aliases()).willReturn(aliases);
+		given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
 
-    @Test
-    void nftBurnFailurePathWorksWithNullLedgers() {
-        givenNonfungibleFrameContext();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, a -> a);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		final var result = subject.computeInternal(frame);
 
-        given(sigsVerifier.hasActiveSupplyKey(true, nonFungibleTokenAddr, recipientAddr, null))
-                .willThrow(new NullPointerException());
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(creator.createUnsuccessfulSyntheticRecord(FAIL_INVALID))
-                .willReturn(mockRecordBuilder);
-        given(encoder.encodeBurnFailure(FAIL_INVALID)).willReturn(failInvalidResult);
-        given(worldUpdater.aliases()).willReturn(aliases);
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+		assertEquals(failInvalidResult, result);
+		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, a -> a);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        final var result = subject.computeInternal(frame);
+	@Test
+	void nftBurnHappyPathWorks() {
+		givenNonfungibleFrameContext();
+		givenLedgers();
+		givenPricingUtilsContext();
 
-        assertEquals(failInvalidResult, result);
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
-    }
+		given(sigsVerifier.hasActiveSupplyKey(true, nonFungibleTokenAddr, recipientAddr, wrappedLedgers))
+				.willReturn(true);
+		given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
+		given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
+				.willReturn(tokenStore);
+		given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp)).willReturn(1L);
+		given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee()).willReturn(1L);
+		given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
+				.willReturn(mockRecordBuilder);
+		final var receiptBuilder = TxnReceipt.newBuilder()
+				.setNewTotalSupply(123L);
+		given(mockRecordBuilder.getReceiptBuilder()).willReturn(receiptBuilder);
+		given(encoder.encodeBurnSuccess(123L)).willReturn(successResult);
+		given(burnLogic.validateSyntax(any())).willReturn(OK);
 
-    @Test
-    void nftBurnHappyPathWorks() {
-        givenNonfungibleFrameContext();
-        givenLedgers();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, a -> a);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		final var result = subject.computeInternal(frame);
 
-        given(
-                        sigsVerifier.hasActiveSupplyKey(
-                                true, nonFungibleTokenAddr, recipientAddr, wrappedLedgers))
-                .willReturn(true);
-        given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
-                .willReturn(tokenStore);
-        given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
-                .willReturn(mockRecordBuilder);
-        final var receiptBuilder = TxnReceipt.newBuilder().setNewTotalSupply(123L);
-        given(mockRecordBuilder.getReceiptBuilder()).willReturn(receiptBuilder);
-        given(encoder.encodeBurnSuccess(123L)).willReturn(successResult);
-        given(burnLogic.validateSyntax(any())).willReturn(OK);
+		assertEquals(successResult, result);
+		verify(burnLogic).burn(nonFungibleId, 0, targetSerialNos);
+		verify(wrappedLedgers).commit();
+		verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, a -> a);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        final var result = subject.computeInternal(frame);
+	@Test
+	void nftBurnWorksForInvalidSyntax() {
+		givenNonfungibleFrameContext();
+		givenLedgers();
+		givenPricingUtilsContext();
 
-        assertEquals(successResult, result);
-        verify(burnLogic).burn(nonFungibleId, 0, targetSerialNos);
-        verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
-    }
+		given(sigsVerifier.hasActiveSupplyKey(true, nonFungibleTokenAddr, recipientAddr, wrappedLedgers))
+				.willReturn(true);
+		given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
+		given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
+				.willReturn(tokenStore);
+		given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp)).willReturn(1L);
+		given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee()).willReturn(1L);
+		given(burnLogic.validateSyntax(any())).willReturn(INVALID_TOKEN_ID);
+		given(creator.createUnsuccessfulSyntheticRecord(INVALID_TOKEN_ID))
+				.willReturn(mockRecordBuilder);
 
-    @Test
-    void nftBurnWorksForInvalidSyntax() {
-        givenNonfungibleFrameContext();
-        givenLedgers();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, а -> а);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		subject.computeInternal(frame);
 
-        given(
-                        sigsVerifier.hasActiveSupplyKey(
-                                true, nonFungibleTokenAddr, recipientAddr, wrappedLedgers))
-                .willReturn(true);
-        given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
-                .willReturn(tokenStore);
-        given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(burnLogic.validateSyntax(any())).willReturn(INVALID_TOKEN_ID);
-        given(creator.createUnsuccessfulSyntheticRecord(INVALID_TOKEN_ID))
-                .willReturn(mockRecordBuilder);
+		verify(wrappedLedgers, never()).commit();
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, а -> а);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        subject.computeInternal(frame);
+	@Test
+	void fungibleBurnHappyPathWorks() {
+		givenFungibleFrameContext();
+		givenLedgers();
+		givenPricingUtilsContext();
 
-        verify(wrappedLedgers, never()).commit();
-    }
+		given(sigsVerifier.hasActiveSupplyKey(true, fungibleTokenAddr, recipientAddr, wrappedLedgers))
+				.willReturn(true);
+		given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
+		given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
+				.willReturn(tokenStore);
+		given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp)).willReturn(1L);
+		given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee()).willReturn(1L);
+		given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
+				.willReturn(expirableTxnRecordBuilder);
+		given(encoder.encodeBurnSuccess(49)).willReturn(burnSuccessResultWith49Supply);
+		given(burnLogic.validateSyntax(any())).willReturn(OK);
 
-    @Test
-    void fungibleBurnHappyPathWorks() {
-        givenFungibleFrameContext();
-        givenLedgers();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, a -> a);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		final var result = subject.computeInternal(frame);
 
-        given(
-                        sigsVerifier.hasActiveSupplyKey(
-                                true, fungibleTokenAddr, recipientAddr, wrappedLedgers))
-                .willReturn(true);
-        given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
-                .willReturn(tokenStore);
-        given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
-                .willReturn(expirableTxnRecordBuilder);
-        given(encoder.encodeBurnSuccess(49)).willReturn(burnSuccessResultWith49Supply);
-        given(burnLogic.validateSyntax(any())).willReturn(OK);
+		assertEquals(burnSuccessResultWith49Supply, result);
+		verify(burnLogic).burn(fungibleId, AMOUNT, List.of());
+		verify(wrappedLedgers).commit();
+		verify(worldUpdater).manageInProgressRecord(recordsHistorian, expirableTxnRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, a -> a);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        final var result = subject.computeInternal(frame);
+	@Test
+	void fungibleBurnFailureAmountOversize() {
+		// given:
+		given(frame.getSenderAddress()).willReturn(contractAddress);
+		given(frame.getWorldUpdater()).willReturn(worldUpdater);
+		given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
+		doCallRealMethod().when(frame).setRevertReason(any());
+		given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurnAmountOversize);
+		// when:
+		final var result = subject.computePrecompile(pretendArguments, frame);
+		// then:
+		assertNull(result.getOutput());
+		verify(wrappedLedgers, never()).commit();
+		verify(worldUpdater, never()).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        assertEquals(burnSuccessResultWith49Supply, result);
-        verify(burnLogic).burn(fungibleId, AMOUNT, List.of());
-        verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(
-                        recordsHistorian, expirableTxnRecordBuilder, mockSynthBodyBuilder);
-    }
+	@Test
+	void fungibleBurnForMaxAmountWorks() {
+		givenFrameContext();
+		givenLedgers();
+		givenPricingUtilsContext();
 
-    @Test
-    void fungibleBurnFailureAmountOversize() {
-        // given:
-        given(frame.getSenderAddress()).willReturn(contractAddress);
-        given(frame.getWorldUpdater()).willReturn(worldUpdater);
-        given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-        doCallRealMethod().when(frame).setRevertReason(any());
-        given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurnAmountOversize);
-        // when:
-        final var result = subject.computePrecompile(pretendArguments, frame);
-        // then:
-        assertNull(result.getOutput());
-        verify(wrappedLedgers, never()).commit();
-        verify(worldUpdater, never())
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
-    }
+		given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurnMaxAmount);
+		given(syntheticTxnFactory.createBurn(fungibleBurnMaxAmount)).willReturn(mockSynthBodyBuilder);
+		given(sigsVerifier.hasActiveSupplyKey(true, fungibleTokenAddr, recipientAddr, wrappedLedgers))
+				.willReturn(true);
+		given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
+		given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
+				.willReturn(tokenStore);
+		given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
+		given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp)).willReturn(1L);
+		given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
+		given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+		given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
+		given(mockFeeObject.getServiceFee()).willReturn(1L);
+		given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
+				.willReturn(expirableTxnRecordBuilder);
+		given(encoder.encodeBurnSuccess(anyLong())).willReturn(burnSuccessResultWithLongMaxValueSupply);
+		given(burnLogic.validateSyntax(any())).willReturn(OK);
 
-    @Test
-    void fungibleBurnForMaxAmountWorks() {
-        givenFrameContext();
-        givenLedgers();
-        givenPricingUtilsContext();
+		subject.prepareFields(frame);
+		subject.prepareComputation(pretendArguments, a -> a);
+		subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+		final var result = subject.computeInternal(frame);
 
-        given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurnMaxAmount);
-        given(syntheticTxnFactory.createBurn(fungibleBurnMaxAmount))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        sigsVerifier.hasActiveSupplyKey(
-                                true, fungibleTokenAddr, recipientAddr, wrappedLedgers))
-                .willReturn(true);
-        given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
-                .willReturn(tokenStore);
-        given(infrastructureFactory.newBurnLogic(accountStore, tokenStore)).willReturn(burnLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
-                .willReturn(1L);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
-        given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
-                .willReturn(expirableTxnRecordBuilder);
-        given(encoder.encodeBurnSuccess(anyLong()))
-                .willReturn(burnSuccessResultWithLongMaxValueSupply);
-        given(burnLogic.validateSyntax(any())).willReturn(OK);
+		assertEquals(burnSuccessResultWithLongMaxValueSupply, result);
+		verify(burnLogic).burn(fungibleId, Long.MAX_VALUE, List.of());
+		verify(wrappedLedgers).commit();
+		verify(worldUpdater).manageInProgressRecord(recordsHistorian, expirableTxnRecordBuilder, mockSynthBodyBuilder);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(pretendArguments, a -> a);
-        subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
-        final var result = subject.computeInternal(frame);
+	@Test
+	void gasRequirementReturnsCorrectValueForBurnToken() {
+		// given
+		givenMinFrameContext();
+		givenPricingUtilsContext();
+		Bytes input = Bytes.of(Integers.toBytes(ABI_ID_BURN_TOKEN));
+		given(decoder.decodeBurn(any())).willReturn(fungibleBurn);
+		given(syntheticTxnFactory.createBurn(any()))
+				.willReturn(TransactionBody.newBuilder().setTokenBurn(TokenBurnTransactionBody.newBuilder()));
+		given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(
+				new FeeObject(TEST_NODE_FEE, TEST_NETWORK_FEE, TEST_SERVICE_FEE));
+		given(feeCalculator.estimatedGasPriceInTinybars(any(), any())).willReturn(DEFAULT_GAS_PRICE);
+		given(worldUpdater.permissivelyUnaliased(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
 
-        assertEquals(burnSuccessResultWithLongMaxValueSupply, result);
-        verify(burnLogic).burn(fungibleId, Long.MAX_VALUE, List.of());
-        verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(
-                        recordsHistorian, expirableTxnRecordBuilder, mockSynthBodyBuilder);
-    }
+		subject.prepareFields(frame);
+		subject.prepareComputation(input, a -> a);
+		long result = subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
 
-    @Test
-    void gasRequirementReturnsCorrectValueForBurnToken() {
-        // given
-        givenMinFrameContext();
-        givenPricingUtilsContext();
-        Bytes input = Bytes.of(Integers.toBytes(ABI_ID_BURN_TOKEN));
-        given(decoder.decodeBurn(any())).willReturn(fungibleBurn);
-        given(syntheticTxnFactory.createBurn(any()))
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setTokenBurn(TokenBurnTransactionBody.newBuilder()));
-        given(feeCalculator.computeFee(any(), any(), any(), any()))
-                .willReturn(new FeeObject(TEST_NODE_FEE, TEST_NETWORK_FEE, TEST_SERVICE_FEE));
-        given(feeCalculator.estimatedGasPriceInTinybars(any(), any()))
-                .willReturn(DEFAULT_GAS_PRICE);
-        given(worldUpdater.permissivelyUnaliased(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+		// then
+		assertEquals(EXPECTED_GAS_PRICE, result);
+	}
 
-        subject.prepareFields(frame);
-        subject.prepareComputation(input, a -> a);
-        long result = subject.getPrecompile().getGasRequirement(TEST_CONSENSUS_TIME);
+	private void givenNonfungibleFrameContext() {
+		givenFrameContext();
+		given(decoder.decodeBurn(pretendArguments)).willReturn(nonFungibleBurn);
+		given(syntheticTxnFactory.createBurn(nonFungibleBurn)).willReturn(mockSynthBodyBuilder);
+	}
 
-        // then
-        assertEquals(EXPECTED_GAS_PRICE, result);
-    }
+	private void givenFungibleFrameContext() {
+		givenFrameContext();
+		given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurn);
+		given(syntheticTxnFactory.createBurn(fungibleBurn)).willReturn(mockSynthBodyBuilder);
+	}
 
-    private void givenNonfungibleFrameContext() {
-        givenFrameContext();
-        given(decoder.decodeBurn(pretendArguments)).willReturn(nonFungibleBurn);
-        given(syntheticTxnFactory.createBurn(nonFungibleBurn)).willReturn(mockSynthBodyBuilder);
-    }
+	private void givenFrameContext() {
+		given(worldUpdater.aliases()).willReturn(aliases);
+		given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+		given(frame.getSenderAddress()).willReturn(contractAddress);
+		given(frame.getContractAddress()).willReturn(contractAddr);
+		given(frame.getRecipientAddress()).willReturn(recipientAddr);
+		given(frame.getWorldUpdater()).willReturn(worldUpdater);
+		given(frame.getRemainingGas()).willReturn(300L);
+		given(frame.getValue()).willReturn(Wei.ZERO);
+		Optional<WorldUpdater> parent = Optional.of(worldUpdater);
+		given(worldUpdater.parentUpdater()).willReturn(parent);
+		given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
+	}
 
-    private void givenFungibleFrameContext() {
-        givenFrameContext();
-        given(decoder.decodeBurn(pretendArguments)).willReturn(fungibleBurn);
-        given(syntheticTxnFactory.createBurn(fungibleBurn)).willReturn(mockSynthBodyBuilder);
-    }
+	private void givenLedgers() {
+		given(wrappedLedgers.accounts()).willReturn(accounts);
+		given(wrappedLedgers.tokenRels()).willReturn(tokenRels);
+		given(wrappedLedgers.nfts()).willReturn(nfts);
+		given(wrappedLedgers.tokens()).willReturn(tokens);
+	}
 
-    private void givenFrameContext() {
-        given(worldUpdater.aliases()).willReturn(aliases);
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
-        given(frame.getSenderAddress()).willReturn(contractAddress);
-        given(frame.getContractAddress()).willReturn(contractAddr);
-        given(frame.getRecipientAddress()).willReturn(recipientAddr);
-        given(frame.getWorldUpdater()).willReturn(worldUpdater);
-        given(frame.getRemainingGas()).willReturn(300L);
-        given(frame.getValue()).willReturn(Wei.ZERO);
-        Optional<WorldUpdater> parent = Optional.of(worldUpdater);
-        given(worldUpdater.parentUpdater()).willReturn(parent);
-        given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-    }
+	private void givenPricingUtilsContext() {
+		given(exchange.rate(any())).willReturn(exchangeRate);
+		given(exchangeRate.getCentEquiv()).willReturn(CENTS_RATE);
+		given(exchangeRate.getHbarEquiv()).willReturn(HBAR_RATE);
+	}
 
-    private void givenLedgers() {
-        given(wrappedLedgers.accounts()).willReturn(accounts);
-        given(wrappedLedgers.tokenRels()).willReturn(tokenRels);
-        given(wrappedLedgers.nfts()).willReturn(nfts);
-        given(wrappedLedgers.tokens()).willReturn(tokens);
-    }
-
-    private void givenPricingUtilsContext() {
-        given(exchange.rate(any())).willReturn(exchangeRate);
-        given(exchangeRate.getCentEquiv()).willReturn(CENTS_RATE);
-        given(exchangeRate.getHbarEquiv()).willReturn(HBAR_RATE);
-    }
-
-    private void givenMinFrameContext() {
-        given(frame.getSenderAddress()).willReturn(contractAddress);
-        given(frame.getWorldUpdater()).willReturn(worldUpdater);
-        given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-    }
+	private void givenMinFrameContext() {
+		given(frame.getSenderAddress()).willReturn(contractAddress);
+		given(frame.getWorldUpdater()).willReturn(worldUpdater);
+		given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
+	}
 }
